fix: :skull: Fix hero image not taking entire space & layout shift

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -204,10 +204,7 @@
 
   .clip-header-image {
     clip-path: polygon(0 0, 100% 0, 100% 82%, 0% 100%);
-  }
-
-  .clip-header-image img {
-    @apply bg-indigo-200 dark:bg-elegiac-dark;
+    /*@apply bg-indigo-100 dark:bg-elegiac-dark;*/
   }
 
   .hero-img-desktop img {
